# ifc_parser_demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
geometry_normalization/: geometry_interface.h  geometry_libimpl.cpp  geometry_myimpl.cpp
geometry_normalization/detail/: brep_mesh_builder.cpp  brep_mesh_builder.h  builtin_geometry_normalizer.cpp  builtin_geometry_normalizer.h  geometry_math.h  mesh_builder.cpp  mesh_builder.h  tessellated_mesh_builder.cpp  tessellated_mesh_builder.h
ifc_extractor/: extractor.cpp  extractor.h  face.h  instance.h
io/: ifc_file_reader.cpp  ifc_reader.h
schema_export/: batch_hint.h  canonical_mesh.h  json_exporter.h  key_generator.h
schema_export/detail/: bounding_box.h
tests/: box_faceted_brep.ifc  box_triangulated_face_set.ifc  l_shape_faceted_brep.ifc  run_smoke_tests.sh
utils/: epsilon.h  vec2.h  vec3.h
